design/parser.ebnf
program = block_stmt code_block? | inline_stmt ("," code_block)?;

block_stmt = if_stmt | while_stmt | fn_stmt;
inline_stmt = assignment_stmt | ret_stmt | expression;

assignment_stmt = "nonlocal"? identifier "=" expression;
ret_stmt = "ret" expression;

if_stmt = "if" expression ":" program ("else" program)? ";";
while_stmt = "while" expression ":" program ";";
fn_stmt = "fn" identifier "(" (identifier ("," identifier)*)? ")" ":" program ";";

expression = disjunction;
disjunction = conjunction ("or" conjunction)*;
conjunction = equality ("and" equality)*;
equality = comparison (("==" | "!=") comparison)?;
comparison = modulo ((">" | ">=" | "<" | "<=") modulo)?;
modulo = addition ("%" addition)*;
addition = multi8n (("+" | "-") multi8n)*;
multi8n = unary (("*" | "/") unary)*;
unary = ("!" | "-") unary | primary;
primary = number 
        | boolean 
        | string
        | nil
        | identifier ("(" (expression ("," expression)*)? ")")?
        | "(" expression ")";
